@@ -44,5 +44,9 @@ Alien::Build = 2.29
 Alien::Build::MB = 0.07
 Alien::Build     = 2.29
 
+[Prereqs / TestRequires]
+Inline::C   = 0
+Inline::CPP = 0
+
 [Author::Plicease::Upload]
 cpan = 1
